syntax = "proto3";

// 命 令 号: 1000
// 命令名称: servo_angle_set
// 命令描述: 转动到指定位置
// 文件名称: d3c1000_srv_angle_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbServoAngleSet";

message ServoAngleSetRequest {
  // ATTR: REQUSET
  sint32 tar_angle = 1; //目标角度，单位0.1°
  uint32 rotation_time = 2; //转动时间，单位ms
  uint32 shielding_time = 3; //屏蔽时间，单位ms
  uint32 mode=4;
}

message ServoAngleSetResponse {

}
